fixed html problem

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,6 @@ navigation:
   - title: Home
     url: /
   - title: Assessment Form
-    url: MAP.html
+    url: MAP
   - title: Methods
     url: methods
