--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,12 @@ show_downloads: True
 navigation:
   - title: Home
     url: /
-  - title: Antepartum Assessment Form
-    url: Antepartum
   - title: CMQCC Assessment Form
     url: CMQCC
+  - title: Antepartum Assessment Form
+    url: Antepartum
+  - title: Peripartum Assessment Form
+    url: Peripartum  
   - title: Methods
     url: Methods
   - title: Codes
